tests/compilation_error/array_casting.ll
int[] intArray
float[] floatArray
intArray = floatArray // array casting isn't supported
